2009-05-15  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25826
        <rdar://problem/6884742> 
        REGRESSION: In Gmail's Edit Link dialog, I can't type in the Link To: field (due to <input type=url> support)

        Added a site specific quirk for mail.google.com which returns "text" when getting the type of an <input type=url>

        * bindings/js/JSHTMLInputElementCustom.cpp:
        (WebCore::needsGmailQuirk):
        (WebCore::JSHTMLInputElement::type):
        * html/HTMLInputElement.idl:

2009-05-14  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=25810
        Upstream V8 DOM Wrapper map declarations.

        No behavior change, so no tests.

        * bindings/v8/V8DOMMap.h:
        (WebCore::WeakReferenceMap::WeakReferenceMap): Added.
        (WebCore::WeakReferenceMap::~WeakReferenceMap): Added.
        (WebCore::WeakReferenceMap::get): Added.
        (WebCore::WeakReferenceMap::set): Added.
        (WebCore::WeakReferenceMap::forget): Added.
        (WebCore::WeakReferenceMap::contains): Added.
        (WebCore::WeakReferenceMap::impl): Added.
        (WebCore::DOMWrapperMap::DOMWrapperMap): Added.

2009-05-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt
        
        https://bugs.webkit.org/show_bug.cgi?id=25773
        
        Rename GraphicsLayer::graphicsContextsFlipped() to 
        GraphicsLayer::compositingCoordinatesOrientation() in order to clarify the usage.

        Clean up code around the GraphicsLayer "contents" layer that makes use of this
        flag, by removing the setHasContentsLayer() method, and just using setContentsLayer(),
        which can then always do the flipping if necessary.

        Only affects ACCELERATED_COMPOSITING builds.
        
        * platform/graphics/GraphicsLayer.h:
        (WebCore::GraphicsLayer::):